--- a/DemoWebCam/appsettings.json
+++ b/DemoWebCam/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1; UID=root; Password=root123;Database=DemoWebCam;"
+  }
 }
