--- a/DemoWebCam/appsettings.json
+++ b/DemoWebCam/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1; UID=root; Password=root123;Database=DemoWebCam;"
-  }
+  "AllowedHosts": "*"
 }
