--- a/DemoWebCam/appsettings.Development.json
+++ b/DemoWebCam/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1; UID=root; Password=root123;Database=DemoWebCam;"
   }
 }
